# Effective-Modern-Cpp

./: .gitignore
Chapter 1. Deducing Types/Item 1-- Understand template type deduction/: array_param.cpp  case1.cpp  case2.cpp  case3.cpp  func_param.cpp
Chapter 1. Deducing Types/Item 2--Understand auto type deduction/: auto.cpp
Chapter 1. Deducing Types/Item 3--Understand decltype/: template_ret.cpp  universal.cpp  var_decltype.cpp
Chapter 1. Deducing Types/Item 4--Know how to view deduced types/: runtime.cpp
Chapter 2. auto/: README.md
Chapter 2. auto/Item 5 Prefer auto to explicit type declarations/: Makefile  item5.cpp
Chapter 2. auto/Item 6 Use the explicitly typed initializer idiom when auto deduces undesired types/: item6.cpp
Chapter 3. Moving to Modern C++/: README.md
Chapter 3. Moving to Modern C++/Item 07 Distinguish between () and {} when creating objects/: Makefile  item6.cpp
Chapter 3. Moving to Modern C++/Item 08 Prefer nullptr to 0 and NULL/: Makefile  item8.cpp
Chapter 3. Moving to Modern C++/Item 09 Prefer alias declarations to typedefs/: Makefile  item9.cpp
Chapter 3. Moving to Modern C++/Item 10 Prefer scoped enums to unscoped enums/: Makefile  README.md  item10.cpp
Chapter 3. Moving to Modern C++/Item 11 Prefer deleted functions to private undefined ones/: Makefile  item11.cpp
Chapter 3. Moving to Modern C++/Item 12 Declare overriding functions override/: Makefile  item12.cpp
Chapter 3. Moving to Modern C++/Item 13 Prefer const_iterators to iterators/: Makefile  item13.cpp
Chapter 3. Moving to Modern C++/Item 14 Declare functions noexcept if they won’t emit exceptions/: Makefile  item14.cpp
Chapter 3. Moving to Modern C++/Item 15 Use constexpr whenever possible/: Makefile  item15.cpp
Chapter 3. Moving to Modern C++/Item 16 Make const member functions thread safe/: Makefile  item16.cpp
Chapter 3. Moving to Modern C++/Item 17 Understand special member function generation/: Makefile  item17.cpp
Chapter 4. Smart Pointers/: README.md
Chapter 4. Smart Pointers/Item 18 Use unique_ptr for exclusive-ownership resource management/: Makefile  \  item18.cpp
Chapter 4. Smart Pointers/Item 19 Use shared_ptr for shared-ownership resource management/: Makefile  item19.cpp
Chapter 4. Smart Pointers/Item 20 Use weak_ptr for shared_ptr-like pointers that can dangle/: Makefile  item20.cpp
Chapter 4. Smart Pointers/Item 21 Prefer make_unique and make_shared to direct use of new/: Makefile  item21.cpp
Chapter 4. Smart Pointers/Item 22 When using the Pimpl Idiom, define special member functions in the implementation file/: Makefile  gadget.h  item22.cpp  widget.cpp  widget.h
Chapter 5. Rvalue References, Move Semantics,and Perfect Forwarding/: README.md
Chapter 5. Rvalue References, Move Semantics,and Perfect Forwarding/Item 23 Understand move and forward/: Makefile  item23.cpp
Chapter 5. Rvalue References, Move Semantics,and Perfect Forwarding/Item 24 Distinguish universal references from rvalue references/: Makefile  item24.cpp
Chapter 5. Rvalue References, Move Semantics,and Perfect Forwarding/Item 25 Use move on rvalue references,forward on universal references/: Makefile  item25.cpp
Chapter 5. Rvalue References, Move Semantics,and Perfect Forwarding/Item 26 Avoid overloading on universal references/: Makefile  item26.cpp
Chapter 6. Lambda Expressions/: README.md
Chapter 6. Lambda Expressions/Item 34 Prefer lambdas to bind/: Makefile  (+1 more)
Chapter 7. The Concurrency API/: README.md
Chapter 8. Tweaks/: README.md
cppreference/General-utilities-library/bitset/apps/representing-signed-integers/: CMakeLists.txt  add.cpp  common.cpp  common.h  decode.cpp  encode.cpp
examples/formatted-time/: CMakeLists.txt  formatted_time.cpp
more/new-features/cxx11/: CMakeLists.txt  forward_reference.cpp  image-gen.py  make_tuple.cpp  perf.sh  script.py  tuple.cpp  tuple_construct.cpp
more/new-features/cxx11/chrono/: README.md  clock.cpp  duration.cpp  ratio.cpp  time_point.cpp
more/new-features/cxx11/concurrency/: CMakeLists.txt
more/new-features/cxx11/concurrency/async/: CMakeLists.txt  async.cpp  packaged_task.cpp  promise.cpp  replace_thread.cpp
more/new-features/cxx11/concurrency/atomic/: ATOMIC_XXX_LOCK_FREE.cpp  CMakeLists.txt  atomic.cpp  atomic_bool.cpp  atomic_flag.cpp  atomic_int.cpp  atomic_thread_fence.cpp  barrier.cpp  compare_exchange_weak.cpp  memory-order.cpp  relaxed-order.cpp  release-acquire-order.cpp  release-consume-order.cpp  rwlock.cpp  seq_cst-order.cpp  user_define_type_atomic.cpp
more/new-features/cxx11/concurrency/condition_variable/: CMakeLists.txt  README.md  barrier.cpp  block_queue.cpp  condition_variable.cpp  count_down_latch.cpp  cv_rwlock.cpp
more/new-features/cxx11/concurrency/data_struct/: CMakeLists.txt  list.h  queue.h  queue_with_dummy_node.h  ring.h  test_list.cpp  test_loockup_table.py  test_loockup_table_utils.cpp  test_lookup_table.cpp  test_lookup_table.py  test_lookup_table_utils.cpp  test_lookup_table_utils.h  test_queue.cpp  test_threadsafe_lookup_table.cpp  test_threadsafe_lookup_table1.cpp  test_threadsafe_lookup_table2.cpp  test_threadsafe_queue.cpp  threadsafe_lookup_table.h  threadsafe_lookup_table1.h  threadsafe_lookup_table2.h  threadsafe_queue_with_dummy_node.h  threadsafe_ring.h  threadsafe_single_list_queue.h  threadsafe_std_queue.h  threadsafe_sys_stailq.h
more/new-features/cxx11/concurrency/lockfree/: CMakeLists.txt  rte_rwlock.h  rwlock.h  spinlock.h  test_boost_lockfree_queue.cpp  test_lock.cpp  test_rwlock.cpp  ticketlock.h
more/new-features/cxx11/concurrency/mutex/: CMakeLists.txt  dead_lock.cpp  lock_guard.cpp  mutex.cpp  unique_lock.cpp
more/new-features/cxx11/concurrency/thread/: CMakeLists.txt  hardware_concurrency.cpp  joinable.cpp  native_handle.cpp  sample.cpp  thread_local.cpp
more/new-features/cxx17/: CMakeLists.txt  any.cpp  apply.cpp  braced-init-list.cpp  constexpr.cpp  constexpr_if.cpp  cxx17.cpp  filesystem.cpp  fold.cpp  inline_variables.cpp  inline_variables.h  lambda_this.cpp  make_from_tuple.cpp  optional.cpp  string_view.cpp  variant.cpp
(+41 files in other folders)
